@@ -1,3 +1,5 @@
+* Fix fuse.Fusebox'ed Array#map when the SKIP_METHODS_RETURNING_ARRAYS true. [jddalton]
+
 * Add fuse.dom.Event decorator and new Event API. [Brandon Aaron, jddalton]
   Note: Backwards compatibility warning.
 
